Replacing initial files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Jenna Gaudio's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: lavender;">
+
   <table cellspacing="20">
     <tr>
       <td><img src="Jenna media/Jenna Circle Profile Pic .png" alt="Jenna Gaudio Profile Picture" /></td>
@@ -34,81 +35,79 @@
     that led to a $33 million acquisition in 2015. As an active community contributor, she serves as the Co-Executive Director of <a href="https://www.meetup.com/jersey-shore-women-in-tech/">Jersey Shore Women in Tech </a>, Advisor to the local
     thought-leadership non-profit, TEDxAsburyPark, and the Co-chair
     of Marketing for the <a href="http://tjmartell.org/how-you-can-help/young-professionals/">TJ Martell Foundation Young Professional Committee.</a Gaudio received a BA in Communication from the Honors division at Monmouth University, where she
-      remains an active mentor.</p>
-
-  <hr size="3" noshade="">
+      remains an active mentor.</p> <hr size="3" noshade="">
 
     <h3>Skills</h3>
     <table cellspacing="10">
-        <tr>
-          <td> Agile Product Management </td>
-          <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
-          <td> Growth Marketing </td>
-          <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
-        </tr>
-        <tr>
-          <td> Comrporate Structure </td>
-          <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
-          <td> Brand Development </td>
-          <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
-        </tr>
-        <tr>
-          <td> Communication Systems </td>
-          <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
-          <td> Events & Launches </td>
-          <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
-        </tr>
-        <tr>
-          <td> Overall Operations </td>
-          <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
-          <td> Talent Acquision & Onboarding </td>
-          <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
-        </tr>
-        <tr>
-          <td> Business Development </td>
-          <td> ⭐ ⭐ ⭐ ⭐ </td>
-          <td> Social Media </td>
-          <td> ⭐ ⭐ ⭐ ⭐ </td>
-        </tr>
-        <td> Ghost/Copy Writing </td>
-        <td> ⭐ ⭐ ⭐ ⭐</td>
-        <td> Video Editing </td>
+      <tr>
+        <td> Agile Product Management </td>
+        <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
+        <td> Growth Marketing </td>
+        <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
+      </tr>
+      <tr>
+        <td> Comrporate Structure </td>
+        <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
+        <td> Brand Development </td>
+        <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
+      </tr>
+      <tr>
+        <td> Communication Systems </td>
+        <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
+        <td> Events & Launches </td>
+        <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
+      </tr>
+      <tr>
+        <td> Overall Operations </td>
+        <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
+        <td> Talent Acquision & Onboarding </td>
+        <td> ⭐ ⭐ ⭐ ⭐ ⭐ </td>
+      </tr>
+      <tr>
+        <td> Business Development </td>
         <td> ⭐ ⭐ ⭐ ⭐ </td>
-        <tr>
-          <td> Partner Integrations </td>
-          <td> ⭐ ⭐ ⭐ </td>
-          <td> Press Relations </td>
-          <td> ⭐ ⭐ ⭐ </td>
-        </tr>
-        <tr>
-          <td> Graphic Design </td>
-          <td> ⭐ ⭐ </td>
-          <td> Digital Advertising </td>
-          <td> ⭐ ⭐ </td>
-        </tr>
-        <tr>
-          <td> Data Management </td>
-          <td> ⭐ ⭐ </td>
-          <td> Data Analysis </td>
-          <td> ⭐ ⭐ </td>
-        </tr>
-        <tr>
-          <td> Security </td>
-          <td> ⭐ ⭐ </td>
-          <td> SEO </td>
-          <td> ⭐ ⭐ </td>
-        </tr>
-        <tr>
-          <td> Web Development </td>
-          <td> ⭐ </td>
-          <td> Traditional Promotions </td>
-          <td> ⭐ </td>
-        </tr>
+        <td> Social Media </td>
+        <td> ⭐ ⭐ ⭐ ⭐ </td>
+      </tr>
+      <td> Ghost/Copy Writing </td>
+      <td> ⭐ ⭐ ⭐ ⭐</td>
+      <td> Video Editing </td>
+      <td> ⭐ ⭐ ⭐ ⭐ </td>
+      <tr>
+        <td> Partner Integrations </td>
+        <td> ⭐ ⭐ ⭐ </td>
+        <td> Press Relations </td>
+        <td> ⭐ ⭐ ⭐ </td>
+      </tr>
+      <tr>
+        <td> Graphic Design </td>
+        <td> ⭐ ⭐ </td>
+        <td> Digital Advertising </td>
+        <td> ⭐ ⭐ </td>
+      </tr>
+      <tr>
+        <td> Data Management </td>
+        <td> ⭐ ⭐ </td>
+        <td> Data Analysis </td>
+        <td> ⭐ ⭐ </td>
+      </tr>
+      <tr>
+        <td> Security </td>
+        <td> ⭐ ⭐ </td>
+        <td> SEO </td>
+        <td> ⭐ ⭐ </td>
+      </tr>
+      <tr>
+        <td> Web Development </td>
+        <td> ⭐ </td>
+        <td> Traditional Promotions </td>
+        <td> ⭐ </td>
+      </tr>
 
-        </tr>
+      </tr>
     </table>
 
-  <hr size="3" noshade="">
+    <hr size="3" noshade="">
 
     <h3> Work Experience </h3>
     <table cellspacing="10" border="1">
@@ -175,24 +174,6 @@
         <li><a href="https://njbiz.com/njbiz-names-40-under-40-awards-winners-for-2018/">40 Under 40</a> 2018 Award from NJBIZ</li>
       </ul>
     </P>
-    <h3>Recent Press</h3>
-    <p>
-      <ul>
-        <li><a download href="https://cdn2.hubspot.net/hubfs/2825325/Digital%20Video%20Advertising%20Best%20Practices%202018%20-%20Connecting%20the%20Dots%20Across%20Screens%20and%20Forma....pdf"> Digital Advertising Best Practices 2018 </a>by
-          eMarketer</li>
-        <li><a href="https://tworivertimes.com/womens-day-event-at-bell-works-seeks-to-inspire-empower/">Celebration of International Women's Day 2018</a> by The Two River Times</li>
-        <li><a href="https://www.tapinto.net/towns/holmdel-and-colts-neck/articles/collier-youth-services-hearts-of-hope-fundraise">Collier Youth Services ‘Hearts of Hope’ Fundraiser</a> by TapIntoHolmdel</li>
-      </ul>
-    </P>
-
-    <h3>Top Events</h3>
-    <p>
-      <ul>
-        <li> <a href="https://www.thedailybeast.com/female-artists-speak-out-against-music-industry-sexism-at-sxsw">Female Artists Speak Out Against Music Industry Sexism at SXSW 2018</a> Hosted by Vydia featuring Mary Labert</li>
-        <li> <a href="https://forum.equinix.com/event-series/evolution-2016">Equinix Evolution Series 2016</a> Hosted by Equinix featuring top tech execs</li>
-        <li> <a href="https://vimeo.com/144784097">Local Video Summit NYC 2016</a> Hosted by Yashi featuring Seth Godin</li>
-      </ul>
-    </p>
 
   </p>
   <h3>Recent Keynotes</h3>
@@ -203,6 +184,25 @@
       <li> <a href="https://www.cowerks.com/events/jstm-67-build-series-vr-bots-mvps-getting-things-done-2/">How We Build: The Difference Between Getting Things Done and Doing Them Well</a>at Jersey Shore Tech 2018</li>
     </ul>
   </p>
+
+  <h3>Top Events</h3>
+  <p>
+    <ul>
+      <li> <a href="https://www.thedailybeast.com/female-artists-speak-out-against-music-industry-sexism-at-sxsw">Female Artists Speak Out Against Music Industry Sexism at SXSW 2018</a> Hosted by Vydia featuring Mary Labert</li>
+      <li> <a href="https://forum.equinix.com/event-series/evolution-2016">Equinix Evolution Series 2016</a> Hosted by Equinix featuring top tech execs</li>
+      <li> <a href="https://vimeo.com/144784097">Local Video Summit NYC 2016</a> Hosted by Yashi featuring Seth Godin</li>
+    </ul>
+  </p>
+
+  <h3>Recent Press</h3>
+  <p>
+    <ul>
+      <li><a download href="https://cdn2.hubspot.net/hubfs/2825325/Digital%20Video%20Advertising%20Best%20Practices%202018%20-%20Connecting%20the%20Dots%20Across%20Screens%20and%20Forma....pdf"> Digital Advertising Best Practices 2018 </a>by
+        eMarketer</li>
+      <li><a href="https://tworivertimes.com/womens-day-event-at-bell-works-seeks-to-inspire-empower/">Celebration of International Women's Day 2018</a> by The Two River Times</li>
+      <li><a href="https://www.tapinto.net/towns/holmdel-and-colts-neck/articles/collier-youth-services-hearts-of-hope-fundraise">Collier Youth Services ‘Hearts of Hope’ Fundraiser</a> by TapIntoHolmdel</li>
+    </ul>
+  </P>
 
   <h3>Top Blogs</h3>
   <p>
@@ -251,7 +251,6 @@
   </p>
 
   <hr size="3" noshade="">
-
 
 </body>
 
